--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,8 @@
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
+
+    <!-- Enlazar JS -->
+    <script src="app.js"></script>
   </body>
 </html>
